chore(config): ajusta connection string, configurações globais e dependências
- Atualiza ApiConstants para centralizar connection string e URLs do frontend/backend.
- Ajusta appsettings.json para incluir FrontendUrl, BackendUrlEstoqueService e estrutura de ConnectionStrings.
- Refatora BuilderExtension para ler connection string e URLs das configurações.

--- a/src/Backend/EstoqueService/EstoqueService.csproj
+++ b/src/Backend/EstoqueService/EstoqueService.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>df98a96d-2767-4bcf-aa00-0d7bb636b02f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
