--- a/src/Backend/EstoqueService/appsettings.json
+++ b/src/Backend/EstoqueService/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "FrontendUrl": "http://localhost:4200",
+  "BackendUrlEstoqueService": "http://localhost:5127",
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
