feat(faturamento): estrutura inicial de configuração, endpoints e padronização de respostas
- Adiciona ApiConfiguration e ApiConstants para centralizar configurações globais do serviço.
- Implementa interfaces e classes para padronização de endpoints, respostas e requisições paginadas.
- Cria extensões para configuração do ambiente, documentação Swagger, CORS e políticas de autorização.
- Refatora Program.cs para utilizar o novo fluxo de inicialização.
- Atualiza appsettings.json com URLs e estrutura de connection string.

--- a/src/Backend/FaturamentoService/appsettings.json
+++ b/src/Backend/FaturamentoService/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "FrontendUrl": "http://localhost:4200",
+  "BackendUrlFaturamentoService": "http://localhost:5042",
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
