chore(faturamento): adiciona suporte a user-secrets e refatora inicialização
- Inclui UserSecretsId no FaturamentoService.csproj para gerenciamento seguro de configurações sensíveis.
- Atualiza Program.cs para utilizar user-secrets, extensões de configuração e seed automático de dados.
- Mantém o fluxo alinhado às convenções do projeto e garante integração entre microsserviços.

--- a/src/Backend/FaturamentoService/FaturamentoService.csproj
+++ b/src/Backend/FaturamentoService/FaturamentoService.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>8494c1be-e08d-426c-88e4-f36d88902cbe</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
