--- a/src/Backend/FaturamentoService/FaturamentoService.csproj
+++ b/src/Backend/FaturamentoService/FaturamentoService.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EstoqueService\EstoqueService.csproj" />
+  </ItemGroup>
+
 </Project>
