feat(estoque/faturamento): integração de baixa de estoque em lote e resiliência de comunicação
- Adiciona endpoints, serviços e repositórios para ProcessarBaixaLote no EstoqueService (inclui IMovimentacaoEstoqueService/Repository, MovimentacaoBatchRequest, endpoint e implementação).
- Implementa MovimentacaoEstoqueService e MovimentacaoEstoqueRepository.
- Ajusta EndpointExtensions e BuilderExtension para registrar novos serviços/endpoints.
- Cria EstoqueClientResilient no FaturamentoService com políticas de resiliência (Polly) para comunicação com EstoqueService.
- Atualiza IEstoqueClient, EstoqueClient e NotaFiscalService para uso do novo client resiliente e integração de baixa em lote.
- Ajusta appsettings.json e FaturamentoService.csproj para dependências e configurações necessárias.

--- a/src/Backend/FaturamentoService/appsettings.json
+++ b/src/Backend/FaturamentoService/appsettings.json
@@ -1,6 +1,7 @@
 {
   "FrontendUrl": "http://localhost:4200",
   "BackendUrlFaturamentoService": "http://localhost:5042",
+  "BackendUrlEstoqueService": "http://localhost:5127",
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
