--- a/src/Frontend/korp-frontend/angular.json
+++ b/src/Frontend/korp-frontend/angular.json
@@ -83,7 +83,11 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/custom-theme.scss",
+              "src/styles/_reset.scss",
+              "src/styles/_utilities.scss",
+              "src/styles/_variables.scss"
             ]
           }
         }
