chore(frontend): remover scaffold legado do App e consolidar bootstrap
- Remove arquivos de scaffold gerados pelo CLI (app.ts, app.html, app.css, app.spec.ts).
- Atualiza angular.json para consolidar uso de SCSS (styles.scss) no build/test.
- Atualiza main.ts para bootstrapping do AppComponent standalone.
- Limpeza de código legado e preparação da estrutura para components standalone e design system.

--- a/src/Frontend/korp-frontend/angular.json
+++ b/src/Frontend/korp-frontend/angular.json
@@ -80,7 +80,7 @@
               }
             ],
             "styles": [
-              "src/styles.css",
+              "src/styles/styles.scss",
               "src/custom-theme.scss"
             ]
           }
